Fixed threejs/opacity-text overlap issue. (frontpage), working on shaders.

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -83,6 +83,15 @@ html {
           Segoe UI Symbol,
           "Noto Color Emoji";
 }
+.G_HideScrollbars {
+  //IE, Edge, and Firefox
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    //Chrome, Safari, and Opera
+    display: none;
+  }
+}
 .anim-fade-in {
   animation: opacity-fade-in 5000ms forwards;
   animation-delay: 1s;
